# pam-analyzer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: build.yml
docs/poster/: poster.typ
scripts/: build.py  build_poster.py  calibrate_perch_offset.py  compile_qrc.py  compile_ui.py  make_splash.py  png2ico.py  release.sh  resume-campaigns.sh  rthook_win_dll_path.py  svg2png.sh  test_geo_count.py  update-TOCs.sh
src/pam_analyzer/: __init__.py  __main__.py  app_settings.py  main.py
src/pam_analyzer/app/: __main__.py  settings.py
src/pam_analyzer/core/: birdnet_runner.py  campaign_settings.py  detections_io.py  examine_data_manager.py  project_settings.py  sdcard_scanner.py  utils.py
src/pam_analyzer/domain/: __init__.py  analysis.py  audio_import.py  detection_schema.py  detections.py  entities.py  enums.py  filter_ops.py  values.py
src/pam_analyzer/infrastructure/: __init__.py  _analysis_helpers.py  analysis_discovery.py  audio_extractor.py  audio_import.py  audio_inventory_discovery.py  base_analysis_runner.py  birdnet_analyzer.py  birdnet_lib.py  birdnet_runner.py  csv_detection_repo.py  model_versions.py  pamproj_migration.py  paths.py  perch_runner.py  project_loader.py  psutil_sdcard_scanner.py  toml_campaign_repo.py  toml_project_repo.py
src/pam_analyzer/panels/: about_dialog.py  birdnet.py  campaign_detail.py  campaigns.py  detections_grid.py  examine.py  import_audio.py  project.py
src/pam_analyzer/static/: audio_cell_renderer.js
src/pam_analyzer/ui/: app_state.py  detection_table.py  main_window.py  main_window.ui  resources.qrc  settings.py
src/pam_analyzer/ui/dialogs/: about_dialog.py  about_dialog.ui  folder_import_dialog.py  folder_import_dialog.ui  import_conflict_dialog.py  import_conflict_dialog.ui
src/pam_analyzer/ui/models/: audio_inventory_tree_model.py  birdnet_results_model.py  campaign_overview.py  detections_table_model.py  filter_exprs.py
src/pam_analyzer/ui/panels/: birdnet_panel.py  birdnet_panel.ui  campaign_detail_widget.py  campaign_detail_widget.ui  campaigns_panel.py  campaigns_panel.ui  examine_panel.py  examine_panel.ui  import_audio_panel.py  import_audio_panel.ui  project_panel.py  project_panel.ui  welcome_panel.py  welcome_panel.ui
src/pam_analyzer/widgets/: __init__.py  audio_player.py  combo_delegate.py  deselectable_list_view.py  detection_table.py  filter_ops.py  filter_popups.py  header_filter_row.py  map_picker.py  map_picker.qml  multi_column_sort_table.py  no_hover_style.py  spectrogram_widget.py
src/pam_analyzer/workers/: __init__.py  analysis_worker.py  audio_import_worker.py  import_orchestrator.py  project_load_worker.py
tests/: conftest.py  test_architecture.py
tests/domain/: test_audio_import.py  test_detection_schema.py  test_detections.py  test_entities.py  test_filter_ops.py
tests/infrastructure/: test_audio_import.py  test_audio_inventory_discovery.py  test_csv_detection_repo.py  test_pamproj_migration.py  test_perch_runner.py  test_perch_v2_pinned_load.py  test_project_loader.py  test_species_list_format.py  test_toml_campaign_repo.py  test_toml_project_repo.py
tests/ui/: test_birdnet_panel.py  test_campaign_detail_widget_folder_import.py  test_campaign_overview.py  test_campaigns_panel.py  test_examine_panel.py  test_filter_exprs.py  test_folder_import_dialog.py  test_import_audio_panel.py  test_project_panel.py
tests/widgets/: test_filter_ops.py  test_filter_popups.py
tests/workers/: test_analysis_worker.py  test_audio_import_worker.py  test_project_load_worker.py
