[project]
name = "pam-analyzer"
version = "0.3.1"
description = "Automated bird species detection from acoustic recordings."
readme = "README.md"
requires-python = ">=3.13,<3.14"  # 3.14 blocked by tensorflow (no cp314 wheels yet) and birdnet (requires-python <3.14)
dependencies = [
    "PySide6>=6.11.0",
    "birdnet>=0.2.16",
    "tensorflow>=2.17.0",                                                             # Fix Perch v2 "unknown attribute code: 22" (StableHLO) bug
    "kagglehub>=1.0.2",
    "platformdirs>=4.3.0",
    "psutil>=6.0.0",
    "guano>=1.0.16",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "tomli-w>=1.2",
    "polars>=1.0",
    "mutagen>=1.48",
]

[project.scripts]
pam-analyzer = "pam_analyzer.app.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "poethepoet>=0.29",
    "py-spy>=0.3",
]

[tool.uv]
# Intel Mac (darwin/x86_64) is not supported: Google stopped shipping macOS
# x86_64 TensorFlow wheels after 2.16 and Perch v2 needs 2.17+. Excluding the
# platform here keeps the universal lock solvable (birdnet pins TF <2.17 on
# Intel Mac, which conflicts with our floor).
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
# Fail uv lock if any of these lacks installable wheels, instead of failing
# at install time on that machine.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pam_analyzer"]

# Run ruff using uvx:
#  uvx ruff check src/pam_analyzer/
#  uvx ruff check src/pam_analyzer/ --fix
[tool.ruff]
line-length = 120
extend-exclude = [
    "**/ui_*.py",
    "**/*_rc.py",
]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Select specific error codes to enforce
select = [
    "F",    # Pyflakes (basic Python errors)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # Import sorting
    "C4",   # Flake8 Comprehensions
    "B",    # Flake8 Bugbear (security and design checks)
    "UP",   # Pyupgrade (modernize Python code)
]

[tool.poe.tasks]
compile-ui = { cmd = "python scripts/compile_ui.py", help = "Compile Qt Designer .ui files to ui_*.py modules" }
compile-qrc = { cmd = "python scripts/compile_qrc.py", help = "Compile Qt resource files to *_rc.py modules" }
run-app = "python -m pam_analyzer"
run = { ref = "run-app", deps = ["compile-ui", "compile-qrc"], help = "Compile UI/resources, then run the app" }
run-dbg = { cmd = "python -m pam_analyzer", env = {PAM_LOG_LEVEL = "DEBUG"}, help = "Run the app with DEBUG logging (skips UI recompile)" }
profile = { cmd = "py-spy record -o spectrogram_profile.svg -- python -m pam_analyzer", help = "Record a py-spy flame graph; navigate the app then Ctrl+C to write spectrogram_profile.svg (Windows: run as Administrator)" }
test = { cmd = "pytest", deps = ["compile-ui", "compile-qrc"], help = "Compile UI/resources, then run all tests" }
test-fast = { cmd = "pytest -m 'not slow'", deps = ["compile-ui", "compile-qrc"], help = "Compile UI/resources, then run only fast tests" }
test-slow = { cmd = "pytest -m slow", deps = ["compile-ui", "compile-qrc"], help = "Compile UI/resources, then run only the slow model tests" }
lint = "ruff check src tests"
fmt = "ruff format src tests"
install-hooks = { cmd = "git config core.hooksPath .githooks", help = "Point git at the repo's tracked hooks (pre-push runs test-fast)" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
# Dump all-thread tracebacks to stderr when a single test exceeds this many
# seconds, so a hang identifies itself in CI logs (it does not kill the test).
faulthandler_timeout = 120
qt_api = "pyside6"
markers = [
    "slow: opt-in tests that load heavy ML models or download artifacts (run with: pytest -m slow)",
]
